@@ -529,7 +529,7 @@ public class CloudSolrClient extends SolrClient {
       }
     }
 
-    DocCollection col = getDocCollection(clusterState, collection);
+    DocCollection col = getDocCollection(clusterState, collection,null);
 
     DocRouter router = col.getRouter();
     
@@ -774,7 +774,7 @@ public class CloudSolrClient extends SolrClient {
       StringBuilder stateVerParamBuilder = null;
       for (String requestedCollection : requestedCollectionNames) {
         // track the version of state we're using on the client side using the _stateVer_ param
-        DocCollection coll = getDocCollection(getZkStateReader().getClusterState(), requestedCollection);
+        DocCollection coll = getDocCollection(getZkStateReader().getClusterState(), requestedCollection,null);
         int collVer = coll.getZNodeVersion();
         if (coll.getStateFormat()>1) {
           if(requestedCollections == null) requestedCollections = new ArrayList<>(requestedCollectionNames.size());
@@ -807,6 +807,15 @@ public class CloudSolrClient extends SolrClient {
     NamedList<Object> resp = null;
     try {
       resp = sendRequest(request);
+      Object o = resp.get(STATE_VERSION, resp.size()-1);
+      if(o != null && o instanceof Map) {
+        Map invalidStates = (Map) o;
+        for (Object invalidEntries : invalidStates.entrySet()) {
+          Map.Entry e = (Map.Entry) invalidEntries;
+          getDocCollection(getZkStateReader().getClusterState(),(String)e.getKey(), (Integer)e.getValue());
+        }
+
+      }
     } catch (Exception exc) {
 
       Throwable rootCause = SolrException.getRootCause(exc);
@@ -860,7 +869,7 @@ public class CloudSolrClient extends SolrClient {
           !requestedCollections.isEmpty() &&
           wasCommError) {
         for (DocCollection ext : requestedCollections) {
-          DocCollection latestStateFromZk = getDocCollection(zkStateReader.getClusterState(), ext.getName());
+          DocCollection latestStateFromZk = getDocCollection(zkStateReader.getClusterState(), ext.getName(),null);
           if (latestStateFromZk.getZNodeVersion() != ext.getZNodeVersion()) {
             // looks like we couldn't reach the server because the state was stale == retry
             stateWasStale = true;
@@ -949,7 +958,7 @@ public class CloudSolrClient extends SolrClient {
       // add it to the Map of slices.
       Map<String,Slice> slices = new HashMap<>();
       for (String collectionName : collectionNames) {
-        DocCollection col = getDocCollection(clusterState, collectionName);
+        DocCollection col = getDocCollection(clusterState, collectionName, null);
         Collection<Slice> routeSlices = col.getRouter().getSearchSlices(shardKeys, reqParams , col);
         ClientUtils.addSlices(slices, collectionName, routeSlices, true);
       }
@@ -1099,10 +1108,13 @@ public class CloudSolrClient extends SolrClient {
   }
 
 
-  protected DocCollection getDocCollection(ClusterState clusterState, String collection) throws SolrException {
+  protected DocCollection getDocCollection(ClusterState clusterState, String collection, Integer expectedVersion) throws SolrException {
     if(collection == null) return null;
     DocCollection col = getFromCache(collection);
-    if(col != null) return col;
+    if(col != null) {
+      if(expectedVersion == null) return col;
+      if(expectedVersion.intValue() == col.getZNodeVersion()) return col;
+    }
 
     ClusterState.CollectionRef ref = clusterState.getCollectionRef(collection);
     if(ref == null){
@@ -1118,8 +1130,15 @@ public class CloudSolrClient extends SolrClient {
     synchronized (lock){
       //we have waited for sometime just check once again
       col = getFromCache(collection);
-      if(col !=null) return col;
-      col = ref.get();
+      if(col !=null) {
+        if(expectedVersion == null) return col;
+        if(expectedVersion.intValue() == col.getZNodeVersion()) {
+          return col;
+        } else {
+          collectionStateCache.remove(collection);
+        }
+      }
+      col = ref.get();//this is a call to ZK
     }
     if(col == null ) return  null;
     if(col.getStateFormat() >1) collectionStateCache.put(collection, new ExpiringCachedDocCollection(col));
